infrastrucutre/k8s/traefik.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo
  namespace: production

spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 9001
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 9000
